tests/cases/errors/invalid-syntax/defs-not-last-with-data-keys/input.sym
{ $port 3000
, :name myapp
}
{ :server
  { :port $port
  }
}
